@@ -30,8 +30,11 @@
                          newdata = newdata, rank = take)
         }
         if (inherits(object, "capscale")) {
-            if (take > 0)
+            if (take > 0) {
                 out <- dist(u %*% slam/sqrt(nr))
+                if (!is.null(object$ac))
+                    out <- out - object$ac
+            }
         } else {
             if (take > 0) 
                 out <- u %*% slam %*% t(v)
