@@ -6,6 +6,10 @@ Version 1.18-21 (opened January 9, 2011)
 
 	* capscale: return additive constant ('ac') when 'add = TRUE'. 
 
+	* fitted.capscale, predict.rda: additive constant ('ac')
+	subtracted from the estimated distances when 'add = TRUE' was used
+	in capscale().
+
 Version 1.18-20 (closed January 9, 2011)
 
 	* capscale: the total inertia was defined as the sum of absolute
